update Copyright informations, fix checkstyle warning and fix code review comments
Issue-ID: DMAAP-1585
Signed-off-by: sliard <samuel.liard@gmail.com>
Change-Id: I16684c4078cccf56d2e140100977a42e18ffdeeb